[tool.poetry]
name = "testds"
version = "0.1.0"
description = ""
authors = ["jadiazm <jonathan.diazm5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.27.1"
pandas = "^2.1.4"
seaborn = "^0.13.0"
missingno = "^0.5.2"
pyjanitor = "^0.26.0"
pyreadr = "^0.5.0"
session-info = "^1.0.0"
upsetplot = "^0.8.0"
nbformat = "^5.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
